Fri Aug 20 15:21:51 PDT 1999	Michael Jennings <mej@eterm.org>

	Damn!  No wonder it's been so fscking slow.  Okay, folks, try
	some shaded transparency now.  I'll bet you'll notice a speed
	difference. :-)
	
-------------------------------------------------------------------------------
Fri Aug 20 16:05:59 PDT 1999	Michael Jennings <mej@eterm.org>

	Ugh.  I'd fixed this on my local theme but never on the CVS stuff.
	Sorry, folks.  Thanks to Ashley Penney <ashp@bastard.co.uk> for
	pointing this out.  The F1 key should bring up the menu now, and that
	line should no longer generate a parse error. =)
	
-------------------------------------------------------------------------------
Fri Aug 20 17:28:24 PDT 1999	Michael Jennings <mej@eterm.org>

	Fixed a small bug in icon size handling located by Hubert Verstraete
	<hubertv@bigfoot.com>.
	
-------------------------------------------------------------------------------
Mon Aug 23 10:33:20 PDT 1999	Michael Jennings <mej@eterm.org>

	Fixed a bug where Eterm wouldn't start handling events soon enough.
	
-------------------------------------------------------------------------------
Tue Aug 24 12:31:23 PDT 1999	Michael Jennings <mej@eterm.org>

	Added more debugging output to pixmap.c to try and locate some bugs.
	
-------------------------------------------------------------------------------
Tue Aug 24 13:00:46 PDT 1999	Michael Jennings <mej@eterm.org>

	Fixed the bug reported by David Coulson <technoir@linux.com> that
	caused incorrect updates in trans mode.
	
-------------------------------------------------------------------------------
Wed Aug 25 12:28:50 PDT 1999	Michael Jennings <mej@eterm.org>

	Applied XIM fix from Sung-Hyun Nam <namsh@lgic.co.kr>.
	
-------------------------------------------------------------------------------
Fri Aug 27 19:39:26 PDT 1999	Michael Jennings <mej@eterm.org>

	Fix fix fix.
	
-------------------------------------------------------------------------------