@@ -9,39 +9,38 @@ themedir = $(pkgdatadir)/themes
 
 all: Makefile
 	@echo "*** Generating pixmap list files from images in tile/ and scale/..."
-	@true > pixmaps.list
-	@cd tile ; \
-	true > tiled-pixmaps.list ; \
+	@true > $(srcdir)/pixmaps.list
+	@true > $(srcdir)/tile/tiled-pixmaps.list
+	@true > $(srcdir)/scale/scaled-pixmaps.list
+	@cd $(srcdir)/tile ; \
 	for i in `ls -1 | grep -v CVS | grep -v \.cvsignore | grep -v pixmaps.list` ; do \
-	  echo $$i >> tiled-pixmaps.list ; \
-	  echo '"'$$i'@0x0+0+0:tile"' >> ../pixmaps.list ; \
+	  echo $$i >> $(srcdir)/tile/tiled-pixmaps.list ; \
+	  echo '"'$$i'@0x0+0+0:tile"' >> $(srcdir)/pixmaps.list ; \
 	done ; \
-	cd .. ; \
-	cd scale ; \
-	true > scaled-pixmaps.list ; \
+	cd $(srcdir)/scale ; \
 	for i in `ls -1 | grep -v CVS | grep -v \.cvsignore | grep -v pixmaps.list` ; do \
-	  echo $$i >> scaled-pixmaps.list ; \
-	  echo '"'$$i'@100x100"' >> ../pixmaps.list ; \
+	  echo $$i >> $(srcdir)/scale/scaled-pixmaps.list ; \
+	  echo '"'$$i'@100x100"' >> $(srcdir)/pixmaps.list ; \
 	done
 
 install-data-hook:
-	@if test ! -f pixmaps.list ; then $(MAKE) all ; fi
+	@if test ! -f $(srcdir)/pixmaps.list ; then $(MAKE) all ; fi
 	$(mkinstalldirs) $(DESTDIR)$(pixmapdir)
-	@for j in $(DIRS) ; do echo "Installing pixmaps in $$j" ; cd $$j ; \
+	@(for j in $(DIRS) ; do echo "Installing pixmaps in $$j" ; cd $(srcdir)/$$j ; \
 	  for i in `ls -1 | grep -v CVS | grep -v \.cvsignore | grep -v pixmaps.list` ; do \
 	    echo $(INSTALL_DATA) $$i $(DESTDIR)${pixmapdir} ; \
 	    $(INSTALL_DATA) $$i $(DESTDIR)${pixmapdir} ; \
-	  done ; cd .. ; \
-	done
+	  done ; \
+	done)
 	@for i in tiled-pixmaps.list scaled-pixmaps.list pixmaps.list ; do \
           if test -f $(DESTDIR)${pixmapdir}/$$i ; then \
 	    $(CP) -p $(DESTDIR)${pixmapdir}/$$i $(DESTDIR)${pixmapdir}/$$i.old ; \
 	    echo "WARNING:  Backup of existing $$i created." ; \
 	  fi ; \
 	done
-	$(INSTALL_DATA) tile/tiled-pixmaps.list $(DESTDIR)${pixmapdir}
-	$(INSTALL_DATA) scale/scaled-pixmaps.list $(DESTDIR)${pixmapdir}
-	$(INSTALL_DATA) pixmaps.list $(DESTDIR)${pixmapdir}
+	$(INSTALL_DATA) $(srcdir)/tile/tiled-pixmaps.list $(DESTDIR)${pixmapdir}
+	$(INSTALL_DATA) $(srcdir)/scale/scaled-pixmaps.list $(DESTDIR)${pixmapdir}
+	$(INSTALL_DATA) $(srcdir)/pixmaps.list $(DESTDIR)${pixmapdir}
 	@for i in `ls -1d $(DESTDIR)${themedir}/*` ; do \
 	  for j in tiled-pixmaps.list scaled-pixmaps.list pixmaps.list ; do \
 	    if test $$i != "." -a $$i != ".." -a ! -f $$i/$$j ; then \
