@@ -8,14 +8,15 @@ EXTRA_DIST = Eterm/theme.cfg.in irc/theme.cfg.in chooser/theme.cfg.in emacs/them
 
 install-data-hook:
 	-@for i in $(THEMES) ; do \
-	  $(SED) -e 's%@''PREFIX''@%${prefix}%g' -e 's%@''PKGDATADIR''@%${DESTDIR}${pkgdatadir}%g' -e 's%@''THEME''@%'$$i'%g' $$i/theme.cfg.in > $$i/theme.cfg ; \
+	  $(SED) -e 's%@''PREFIX''@%${prefix}%g' -e 's%@''PKGDATADIR''@%${DESTDIR}${pkgdatadir}%g' -e 's%@''THEME''@%'$$i'%g' \
+	    $(srcdir)/$$i/theme.cfg.in > $(srcdir)/$$i/theme.cfg ; \
 	done
 	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)/themes
 	-@for i in $(THEMES) ; do \
 	  if test ! -d $(DESTDIR)$(pkgdatadir)/themes/$$i ; then \
 	    echo "Installing $$i theme in $(DESTDIR)$(pkgdatadir)/themes" ; \
 	    $(mkinstalldirs) $(DESTDIR)$(pkgdatadir)/themes/$$i ; \
-	    $(CP) $$i/???* $(DESTDIR)$(pkgdatadir)/themes/$$i ; \
+	    $(CP) $(srcdir)/$$i/???* $(DESTDIR)$(pkgdatadir)/themes/$$i ; \
 	    $(CHMOD) 755 $(DESTDIR)$(pkgdatadir)/themes/$$i ; \
 	    $(CHMOD) 644 $(DESTDIR)$(pkgdatadir)/themes/$$i/???* ; \
 	    rm -f $(DESTDIR)$(pkgdatadir)/themes/$$i/theme.cfg.in ; \
